--- a/package.json
+++ b/package.json
@@ -1,12 +1,11 @@
 {
-  "name": "react-typescript",
+  "homepage" : "https://larsflem.github.io/Maritime-Automation-Website/"
+  "predeploy":"npm run build"
+  "deploy":"gh-pages -d build"
+  "name": "Maritime-Automation-Website",
   "version": "1.0.0",
-  "description": "React and TypeScript example starter project",
-  "keywords": [
-    "typescript",
-    "react",
-    "starter"
-  ],
+  "description": "The Maritime Automation Website - By Lars Jørgen Flem",
+  "keywords": ["Maritime", "Automation", "Service"],
   "main": "src/index.tsx",
   "dependencies": {
     "loader-utils": "3.2.1",
@@ -25,10 +24,5 @@
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
   },
-  "browserslist": [
-    ">0.2%",
-    "not dead",
-    "not ie <= 11",
-    "not op_mini all"
-  ]
+  "browserslist": [">0.2%", "not dead", "not ie <= 11", "not op_mini all"]
 }
