--- a/package.json
+++ b/package.json
@@ -1,8 +1,6 @@
 {
-  "homepage" : "https://larsflem.github.io/Maritime-Automation-Website/"
-  "predeploy":"npm run build"
-  "deploy":"gh-pages -d build"
-  "name": "Maritime-Automation-Website",
+  "homepage": "https://larsflem.github.io/Maritime-Automation-Website",
+  "name": "react-typescript",
   "version": "1.0.0",
   "description": "The Maritime Automation Website - By Lars Jørgen Flem",
   "keywords": ["Maritime", "Automation", "Service"],
@@ -20,9 +18,12 @@
   },
   "scripts": {
     "start": "react-scripts start",
+    "predeploy":"npm run build",
+    "deploy":"gh-pages -d build",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
+
   },
   "browserslist": [">0.2%", "not dead", "not ie <= 11", "not op_mini all"]
 }
