--- a/package.json
+++ b/package.json
@@ -1,30 +1,31 @@
-{
-  "homepage": "https://larsflem.github.io/Maritime-Automation-Website",
-  "name": "react-typescript",
-  "version": "1.0.0",
-  "description": "The Maritime Automation Website - By Lars Jørgen Flem",
-  "keywords": ["Maritime", "Automation", "Service"],
-  "main": "src/index.tsx",
-  "dependencies": {
-    "loader-utils": "3.2.1",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
-    "react-scripts": "5.0.1"
-  },
-  "devDependencies": {
-    "@types/react": "18.2.38",
-    "@types/react-dom": "18.2.15",
-    "typescript": "4.4.4",
-    "gh-pages": "^5.0.0" 
-  },
-  "scripts": {
-    "start": "react-scripts start",
-    "predeploy":"npm run build",
-    "deploy":"gh-pages -d build",
-    "build": "react-scripts build",
-    "test": "react-scripts test --env=jsdom",
-    "eject": "react-scripts eject"
+name: Deploy to GitHub Pages
 
-  },
-  "browserslist": [">0.2%", "not dead", "not ie <= 11", "not op_mini all"]
-}
+on:
+  push:
+    branches:
+      - main
+
+jobs:
+  deploy:
+    runs-on: ubuntu-latest
+
+    steps:
+    - name: Checkout repository
+      uses: actions/checkout@v3
+
+    - name: Set up Node.js
+      uses: actions/setup-node@v3
+      with:
+        node-version: '20'  # Specify Node.js version 20 explicitly
+
+    - name: Install dependencies
+      run: npm install
+
+    - name: Build the project
+      run: npm run build
+
+    - name: Deploy to GitHub Pages
+      uses: peaceiris/actions-gh-pages@v3
+      with:
+        github_token: ${{ secrets.GITHUB_TOKEN }}
+        publish_dir: ./build
