--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -3,7 +3,7 @@ name: Deploy to GitHub Pages
 on:
   push:
     branches:
-      - main  # or the branch you're working on
+      - main
 
 jobs:
   deploy:
@@ -11,12 +11,12 @@ jobs:
 
     steps:
     - name: Checkout repository
-      uses: actions/checkout@v3  # Updated to v3
+      uses: actions/checkout@v3
 
     - name: Set up Node.js
-      uses: actions/setup-node@v3  # Updated to v3
+      uses: actions/setup-node@v3
       with:
-        node-version: '20'  # You can also specify the exact version
+        node-version: '20'  # Specify Node.js version 20 explicitly
 
     - name: Install dependencies
       run: npm install
