--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "@types/react": "18.2.38",
     "@types/react-dom": "18.2.15",
     "typescript": "4.4.4",
-    "@babel/plugin-proposal-private-property-in-object": "^7.21.0"  // Add this line
+    "@babel/plugin-proposal-private-property-in-object": "^7.21.0"
   },
   "scripts": {
     "start": "react-scripts start",
