--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -17,11 +17,14 @@ jobs:
         with:
           node-version: '22'
 
+      - name: Install Yarn
+        run: corepack enable  # Ensures Yarn is available
+
       - name: Install Dependencies
-        run: npm ci
+        run: yarn install
 
       - name: Build
-        run: npm run build
+        run: yarn build
 
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v3
@@ -36,7 +39,7 @@ jobs:
       id-token: write
     environment:
       name: github-pages
-      url: 'https://${{ github.repository_owner }}.github.io/${{ github.event.repository.name }}/'
+      url: 'https://larsflem.github.io/Maritime-Automation-Website/'
     steps:
       - name: Setup Pages
         uses: actions/configure-pages@v5
