--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://larsflem.github.io/Maritime-Automation-Website",
+  "homepage": "https://maritime-automation.no",
   "name": "maritime-automation-website",
   "version": "1.0.0",
   "description": "The Maritime Automation Website - By Lars Jørgen Flem",
