--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "loader-utils": "3.2.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-pdf": "^5.6.0",
+    "pdfjs-dist": "^2.16.105",
     "react-scripts": "5.0.1"
   },
   "devDependencies": {
